syntax = "proto3";

package note_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "github.com/olezhek28/auth/pkg/note_v1;note_v1";

service NoteV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetList(google.protobuf.Empty) returns (GetListResponse);
}

message NoteInfo {
  string title = 1 [(validate.rules).string.min_len = 3];
  string content = 2;
  google.protobuf.Timestamp created_at = 3;
}

message Note {
  int64 id = 1;
  NoteInfo info = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message CreateRequest {
  NoteInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetListResponse {
  repeated Note notes = 1;
}